[gd_scene load_steps=10 format=3 uid="uid://2dsfobnjgnqg"]

[ext_resource type="Script" path="res://Level/Switch/GD_singleSwitch.gd" id="1_dq2pc"]
[ext_resource type="Texture2D" uid="uid://balk2mmikxwe7" path="res://Level/Switch/Switch_on_off.png" id="1_fvfxc"]

[sub_resource type="Animation" id="Animation_io7rj"]
resource_name = "Activate"
length = 0.666671
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"onActivationFinished"
}]
}

[sub_resource type="Animation" id="Animation_q5djp"]
resource_name = "Deactivate"
length = 0.666671
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_hiq3s"]
resource_name = "Idle_off"
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_c7grb"]
resource_name = "Idle_on"
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_ha6fp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y78f2"]
_data = {
"Activate": SubResource("Animation_io7rj"),
"Deactivate": SubResource("Animation_q5djp"),
"Idle_off": SubResource("Animation_hiq3s"),
"Idle_on": SubResource("Animation_c7grb"),
"RESET": SubResource("Animation_ha6fp")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tuxy7"]
radius = 0.0627078
height = 0.240367

[node name="Switch" type="Node3D"]
script = ExtResource("1_dq2pc")

[node name="Sprite3D" type="Sprite3D" parent="."]
billboard = 1
texture_filter = 0
texture = ExtResource("1_fvfxc")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y78f2")
}

[node name="Area3D" type="Area3D" parent="." groups=["target"]]
collision_mask = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_tuxy7")

[node name="Timer" type="Timer" parent="."]

[node name="deactivateChildren" type="Node3D" parent="."]

[node name="activateChildren" type="Node3D" parent="."]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
